--- a/res/values-lt/cm_strings.xml
+++ b/res/values-lt/cm_strings.xml
@@ -128,6 +128,7 @@
     <string name="icon_picker_pack_title">Piktogramų rinkinys</string>
     <string name="display_lights_settings_title">Ekranas ir šviesos</string>
     <string name="lights_category_title">Šviesos</string>
+    <string name="notification_pulse_title">Įspėjimo šviesa</string>
     <string name="notification_light_general_title">Pagrindinės</string>
     <string name="notification_light_applist_title">Programėlės</string>
     <string name="notification_light_phonelist_title">Telefono</string>
@@ -178,8 +179,6 @@
     <string name="volume_adjust_sounds_enable_summary">Naudojant telefono garso mygtukus skambėti, kai reguliuojamas garso lygis</string>
     <string name="lockpattern_settings_enable_error_path_title">Rodyti modelio klaidą</string>
     <string name="lockpattern_settings_enable_dots_title">Rodyti modelio taškus</string>
-    <string name="lockscreen_vibrate_enabled_title">Vibruoti</string>
-    <string name="lockscreen_vibrate_enabled_head">Vibruoti atrakinant</string>
     <string name="screen_security_category">Ekano apsauga</string>
     <string name="screen_security_title">Ekrano užraktas</string>
     <string name="screen_security_summary">Keisti ekrano užrakto nustatymus</string>
