--- a/res/values-zh-rCN/cm_strings.xml
+++ b/res/values-zh-rCN/cm_strings.xml
@@ -243,6 +243,7 @@
     <string name="volume_keys_control_ring_stream">音量键将控制铃声音量</string>
     <string name="display_lights_settings_title">显示 &amp; 指示灯</string>
     <string name="lights_category_title">指示灯</string>
+    <string name="notification_pulse_title">通知指示灯</string>
     <string name="notification_light_general_title">常规</string>
     <string name="notification_light_applist_title">应用</string>
     <string name="notification_light_phonelist_title">电话</string>
