--- a/res/values-fr/cm_strings.xml
+++ b/res/values-fr/cm_strings.xml
@@ -139,6 +139,7 @@
     <string name="icon_picker_pack_title">Jeux d\'icônes</string>
     <string name="display_lights_settings_title">Affichage et voyant</string>
     <string name="lights_category_title">Luminosité</string>
+    <string name="notification_pulse_title">Voyant de notification</string>
     <string name="notification_light_general_title">Général</string>
     <string name="notification_light_applist_title">Applications</string>
     <string name="notification_light_phonelist_title">Téléphone</string>
@@ -178,8 +179,6 @@
     <string name="volume_ring_only_description">Sonneries</string>
     <string name="lockpattern_settings_enable_error_path_title">Afficher l\'erreur de schéma</string>
     <string name="lockpattern_settings_enable_dots_title">Afficher les points</string>
-    <string name="lockscreen_vibrate_enabled_title">Vibreur</string>
-    <string name="lockscreen_vibrate_enabled_head">Vibration lors du déverrouillage</string>
     <string name="screen_security_category">Verrouillage de l\'écran</string>
     <string name="screen_security_title">Écran de verrouillage</string>
     <string name="screen_security_summary">Options de l\'écran de verrouillage : style, délais et options diverses</string>
@@ -458,6 +457,9 @@ Des options supplémentaires sont disponibles en appuyant longtemps sur une lign
     <string name="display_calibration_title">Calibrage de l\'écran</string>
     <string name="adb_notify">Notification débogage USB</string>
     <string name="adb_notify_summary">Afficher une notification lorsque le débogage USB est actif</string>
+    <string name="adb_over_network">ADB par réseau</string>
+    <string name="adb_over_network_summary">Activer le débogage TCP/IP sur toutes les interfaces réseaux (réseaux USB, Wi-Fi et Bluetooth). Ce paramètre est réinitialisé au redémarrage</string>
+    <string name="adb_over_network_warning">ATTENTION : Lorsque cette fonction est activée, votre appareil est ouvert aux intrusions sur tous les réseaux connectés, y compris via le réseau mobile\u00A0!\n\nN\'utilisez cette fonctionnalité que sur des réseaux de confiance.\n\nContinuer\u00A0?</string>
     <string name="device_hostname">Nom d\'hôte de l\'appareil</string>
     <string name="system_settings_title">Interface</string>
     <string name="system_interface_title">Interface système</string>
