--- a/res/values-nl/cm_strings.xml
+++ b/res/values-nl/cm_strings.xml
@@ -140,6 +140,7 @@
     <string name="icon_picker_pack_title">Pictogrammenpakket</string>
     <string name="display_lights_settings_title">Scherm &amp; verlichting</string>
     <string name="lights_category_title">Verlichting</string>
+    <string name="notification_pulse_title">Meldingsled</string>
     <string name="notification_light_general_title">Algemeen</string>
     <string name="notification_light_applist_title">Apps</string>
     <string name="notification_light_phonelist_title">Telefoon</string>
@@ -182,8 +183,6 @@
     <string name="battery_light_full_color_title">Volledig opgeladen</string>
     <string name="lockpattern_settings_enable_error_path_title">Patroonfout weergeven</string>
     <string name="lockpattern_settings_enable_dots_title">Patroonknoppen weergeven</string>
-    <string name="lockscreen_vibrate_enabled_title">Trillen</string>
-    <string name="lockscreen_vibrate_enabled_head">Trillen bij ontgrendelen</string>
     <string name="screen_security_category">Schermbeveiliging</string>
     <string name="screen_security_title">Schermvergrendeling</string>
     <string name="screen_security_summary">Schermvergrendelingsbeveiliging en -vertragingen beheren</string>
@@ -572,7 +571,7 @@ Elke regel in de lijst van helderheidsstanden komt overeen met één <i>controle
     <string name="navring_action_open_ime_switcher">Invoermethode wisselen</string>
     <string name="navring_action_kill_app">App stoppen</string>
     <string name="navring_action_none">Geen</string>
-    <string name="navring_action_take_screenshot">Schermafdruk</string>
+    <string name="navring_action_take_screenshot">Screenshot</string>
     <string name="navring_action_ring_vibrate">Geluid/trillen</string>
     <string name="navring_action_ring_silent">Geluid/stil</string>
     <string name="navring_action_ring_vibrate_silent">Geluid/trillen/stil</string>
@@ -582,7 +581,7 @@ Elke regel in de lijst van helderheidsstanden komt overeen met één <i>controle
     <string name="navring_choose_action_title">Actie selecteren</string>
     <string name="power_menu_title">Aan/uit-knop</string>
     <string name="power_menu_reboot_title">Herstarten</string>
-    <string name="power_menu_screenshot_title">Schermafdruk</string>
+    <string name="power_menu_screenshot_title">Screenshot</string>
     <string name="power_menu_expanded_desktop">Uitgebreid bureaublad</string>
     <string name="expanded_desktop_disabled">Uitgeschakeld</string>
     <string name="expanded_desktop_status_bar">Statusbalk zichtbaar</string>
