--- a/res/values-pl/cm_strings.xml
+++ b/res/values-pl/cm_strings.xml
@@ -139,6 +139,7 @@
     <string name="icon_picker_pack_title">Paczka ikon</string>
     <string name="display_lights_settings_title">Wyświetlacz i diody</string>
     <string name="lights_category_title">Dioda powiadomień</string>
+    <string name="notification_pulse_title">Pulsująca dioda</string>
     <string name="notification_light_general_title">Ogólne</string>
     <string name="notification_light_applist_title">Aplikacje</string>
     <string name="notification_light_phonelist_title">Telefon</string>
@@ -177,8 +178,6 @@
     <string name="battery_light_full_color_title">W pełni naładowana</string>
     <string name="lockpattern_settings_enable_error_path_title">Pokazuj błędny wzór</string>
     <string name="lockpattern_settings_enable_dots_title">Pokazuj punkty wzoru</string>
-    <string name="lockscreen_vibrate_enabled_title">Wibracje</string>
-    <string name="lockscreen_vibrate_enabled_head">Wibruj przy odblokowywaniu urządzenia</string>
     <string name="screen_security_category">Zabezpieczenia ekranu</string>
     <string name="screen_security_title">Ekran blokady</string>
     <string name="screen_security_summary">Zobacz i zmień zabezpieczenia ekranu blokady, opóźnienie i limit czasu</string>
