--- a/res/values-ru/cm_strings.xml
+++ b/res/values-ru/cm_strings.xml
@@ -59,8 +59,6 @@
     <string name="lock_clock_summary">Просмотр или изменение настроек отображения виджета «cLock» на главном экране или экране блокировки</string>
     <string name="lockscreen_custom_widgets_title">Виджеты приложений</string>
     <string name="lockscreen_enable_camera_title">Виджет камеры</string>
-    <string name="lockscreen_vibrate_enabled_title">Виброотклик</string>
-    <string name="lockscreen_vibrate_enabled_head">Вибрировать при разблокировке</string>
     <string name="lockscreen_widgets_category_title">Виджеты</string>
     <string name="lockscreen_maximize_widgets_title">Развёрнутые виджеты</string>
     <string name="lockscreen_maximize_widgets_summary">Показывать виджеты экрана блокировки развёрнутыми, а кольцо разблокировки экрана — в свёрнутом виде</string>
@@ -332,6 +330,7 @@
     <string name="screen_animation_style_electronbeam">Пучок электронов</string>
     <string name="screen_animation_style_fade">Затухание</string>
     <string name="lights_category_title">Индикация</string>
+    <string name="notification_pulse_title">Индикатор событий</string>
     <string name="notification_light_general_title">Общие</string>
     <string name="notification_light_applist_title">Приложения</string>
     <string name="notification_light_phonelist_title">Телефон</string>
