--- a/res/values-th/cm_strings.xml
+++ b/res/values-th/cm_strings.xml
@@ -127,6 +127,7 @@
   <string name="icon_picker_pack_title">ชุดไอคอน</string>
   <string name="display_lights_settings_title">การแสดงผล &amp; แสง</string>
   <string name="lights_category_title">แสง</string>
+  <string name="notification_pulse_title">ไฟแจ้งเตือน</string>
   <string name="notification_light_general_title">ทั่วไป</string>
   <string name="notification_light_applist_title">แอปพลิเคชัน</string>
   <string name="notification_light_phonelist_title">โทรศัพท์</string>
