--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -258,12 +258,15 @@
         android:title="@string/development_settings_title" />
 
     <!-- Superuser -->
+<!-- GANBAROU_CHANGE_START
+     We user ChainFire SU, not Koush!
     <header
         android:id="@+id/superuser"
         android:fragment="com.android.settings.cyanogenmod.superuser.PolicyNativeFragment"
         android:icon="@drawable/ic_action_permission"
         android:title="@string/superuser" />
-
+	 GANBAROU_CHANGE_END -->
+	 
     <!-- Performance -->
     <header
         android:id="@+id/performance_settings"
